# energy-data-hackdays

./: .gitignore  README.md  pyproject.toml
OFEN-challenge/: data_exploration.py  readme.md  understanding_the_data.md  undestanding_the_data.md  utils.py
OFEN-challenge/datasets/: entsoe_generation_per_type_2026_01_daily.csv  entsoe_generation_per_type_2026_01_daily_scaled.csv  entsoe_generation_per_type_wide_2026_01.csv  generation_per_type_2026_01.csv  generation_per_type_labeled_2026_01.csv  ogd104_stromproduktion_swissgrid.csv  scaling_factors.csv  stromproduktion_wide.csv
OFEN-challenge/scripts/: derive_scaling_factor_statistics.sh  derive_scaling_factors.sh  join_SFOE_to_ENTSOE.sh  label_and_reorder.mlr
hslu-challenge/: readme.md
hslu-challenge/code/: 01_read_and_explore.ipynb
hslu-challenge/data/pv/ch-rpv300/: 2019_annual_v1_subset_size3az90tilt45.nc  README.md
romande-energie-challenge/: forecasting_utils.py  readme.md  tetouan_city_power.py
sdsc-challenge/: readme.md
