[project]
name = "energy-data-hackdays"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=3",
    "plotly>=6.7.0",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.2.0",
]


[tool.ruff.format]
preview = true

[tool.ruff]
line-length = 80
